--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
-                                <a href="team.html" class="dropdown-item">Our Team</a>
+                                <a href="team.html" class="dropdown-item">Open Plots</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                 <a href="comparison.html" class="dropdown-item">Comparison</a>
                             </div>
