--- a/testimonial.html
+++ b/testimonial.html
@@ -60,7 +60,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
-                                <a href="team.html" class="dropdown-item">Our Team</a>
+                                <a href="team.html" class="dropdown-item">Open Plots</a>
                                 <a href="testimonial.html" class="dropdown-item active">Testimonial</a>
                                 <a href="comparison.html" class="dropdown-item">Comparison</a>
                             </div>
