--- a/contact.html
+++ b/contact.html
@@ -59,11 +59,11 @@
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                         <a href="hosting.html" class="nav-item nav-link">Hosting</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">SERVICES</a>
                             <div class="dropdown-menu m-0">
                                 <a href="team.html" class="dropdown-item">Open Plots</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="comparison.html" class="dropdown-item">Comparison</a>
+                                <a href="testimonial.html" class="dropdown-item">Form-Lands</a>
+                                <a href="comparison.html" class="dropdown-item">Investment</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link active">Contact</a>
