--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">SERVICES</a>
                             <div class="dropdown-menu m-0">
                                 <a href="team.html" class="dropdown-item">Open Plots</a>
-                                <a href="testimonial.html" class="dropdown-item">Form-Lands</a>
+                                <a href="testimonial.html" class="dropdown-item">Farm-Lands</a>
                                 <a href="comparison.html" class="dropdown-item">Investment</a>
                             </div>
                         </div>
