--- a/index.html
+++ b/index.html
@@ -215,15 +215,15 @@
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
-                      
-                        <!-- <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
                                 <a href="team.html" class="dropdown-item">Our Team</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                 <a href="comparison.html" class="dropdown-item">Comparison</a>
                             </div>
-                        </div> -->
+                        </div>
                         <a href="./gallery.html" class="nav-item nav-link">Gallery</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
@@ -237,7 +237,7 @@
                 <div class=" owl-carousel hero-carousel">
                     <div class="container hero-header1 " style="">
 
-                        <div class="row g-5 py-5">
+                        <div class="row g-5 p-5">
                             <div class="col-lg-6 pt-5  text-center text-lg-start"
                                 style="margin-block: 10rem !important;">
                                 <h1 class="display-4 text-white mb-4 animated slideInLeft">Welcome to the
@@ -301,7 +301,7 @@
                     </div>
                     <div class="hero-header2 container" style="">
 
-                        <div class="row g-5">
+                        <div class="row g-5 p-5">
                             <div class="col-lg-6 pt-5 text-center text-lg-start"
                                 style="margin-block: 10rem !important;">
                                 <h1 class="display-4 text-white mb-4 animated slideInLeft">Welcome to the
@@ -315,8 +315,7 @@
                                     Us</a>
                             </div>
                             <div class="col-lg-6 text-center text-lg-start mangos m-0">
-                                <!-- <img class="img-fluid animated zoomIn hero-image"
-                                        src="./img/image01-removebg-preview.png" alt=""> -->
+                                <img class="img-fluid animated zoomIn hero-image" src="./img/tree house.jpg" alt="">
 
 
 
