--- a/testimonial.html
+++ b/testimonial.html
@@ -61,7 +61,7 @@
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
                                 <a href="team.html" class="dropdown-item">Our Team</a>
-                                <a href="testimonial.html" class="dropdown-item active">Testimonial</a>
+                                <a href="testimonial.html" class="dropdown-item active">FORM - LANDS</a>
                                 <a href="comparison.html" class="dropdown-item">Comparison</a>
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 pt-5">
                         <div class="col-12 text-center text-lg-start">
-                            <h1 class="display-4 text-white animated slideInLeft">Testimonial</h1>
+                            <h1 class="display-4 text-white animated slideInLeft">FORM - LANDS</h1>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb justify-content-center justify-content-lg-start animated slideInLeft">
                                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
@@ -112,12 +112,24 @@
 
 
         <!-- Testimonial Start -->
+        <div class="container">
+        <div class="row">
         <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
             <div class="container px-lg-5">
                 <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">What Say Our Clients!!!</h1>
-                    <p class="mb-1">Vero justo sed sed vero clita amet. Et justo vero sea diam elitr amet ipsum eos ipsum clita duo sed. Sed vero sea diam erat vero elitr sit clita.</p>
-                </div>
+                    <h1 class="mb-3">FORM - LANDS</h1>
+                    <img src="./img/Form-Lands.jpg" class="col-lg-6 left-align" />
+                    </div>
+                    <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                    <p class="mb-1 col-lg-6">At MangoForms Real Estate, we specialize in the development and rejuvenation of form-lands, transforming them into thriving, sustainable agricultural spaces. Form-lands represent a unique opportunity for sustainable land use, characterized by their fertile soil and strategic location. With our expertise in land management and agricultural practices, we envision these form-lands as more than just plots of earth but as vibrant ecosystems capable of supporting diverse crops and ecosystems. Through careful planning and sustainable development, we aim to unlock the full potential of form-lands while preserving their natural beauty and ecological integrity.
+                        
+                        At MangoForms Real Estate, we believe in harnessing the inherent productivity of form-lands to cultivate a sustainable future. By promoting eco-friendly farming practices such as agroforestry, permaculture, and organic cultivation methods, we ensure that these lands not only yield bountiful harvests but also contribute to environmental conservation and community well-being. Through partnerships with local farmers and organizations, we seek to create a network of sustainable agricultural hubs where form-lands serve as the foundation for resilient food systems and thriving rural economies. Join us in our mission to unlock the potential of form-lands and cultivate a future where agriculture and nature coexist harmoniously.
+
+                         </div>
+                         </div>
+                         </div>
+                         </div>
+                         </div>
                 <div class="owl-carousel testimonial-carousel">
                     <div class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4">
                         <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle" style="width: 45px; height: 45px; margin-top: -3px;">
@@ -200,7 +212,7 @@
                             </div>
                             <div class="col-md-6">
                                 <h5 class="fw-bold text-white mb-4">Our Services</h5>
-                                <a class="btn btn-link" href="">Domain Register</a>
+                                <a class="btn btn-link" href=""></a>
                                 <a class="btn btn-link" href="">Shared Hosting</a>
                                 <a class="btn btn-link" href="">VPS Hosting</a>
                                 <a class="btn btn-link" href="">Dedicated Hosting</a>
@@ -210,9 +222,9 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h5 class="fw-bold text-white mb-4">Get In Touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>402, Mathrusree Homes Apartments, Mathrusree Nagar, Miyapur, Hyderabad, 500049.</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8885667888</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>rajroypramotors21@gmail.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -234,10 +246,10 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved. 
+                            &copy; <a class="border-bottom" href="#">RAJA ROY PRAMOTORS</a>, All Right Reserved. 
 							
 							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-							Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+							Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns Company</a>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
