--- a/contact.html
+++ b/contact.html
@@ -57,12 +57,11 @@
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
-                        <a href="hosting.html" class="nav-item nav-link">Hosting</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
-                                <a href="team.html" class="dropdown-item">Our Team</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                                <a href="team.html" class="dropdown-item">OPEN PLOTS</a>
+                                <a href="testimonial.html" class="dropdown-item">FORM - LANDS</a>
                                 <a href="comparison.html" class="dropdown-item">Comparison</a>
                             </div>
                         </div>
