--- a/index.html
+++ b/index.html
@@ -311,9 +311,13 @@
             .read-more a {
                 color: white;
             }
+
+            .services img {
+                width: 100%;
+            }
         </style>
         <!-- Pricing Start -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl py-5 services">
             <div class="container px-lg-5">
                 <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
                     data-wow-delay="0.1s" style="max-width: 600px;">
@@ -386,45 +390,6 @@
             </div>
         </div>
         <!-- Pricing End -->
-        <div class="col-lg-4 col-md-6 wow fadeInUp service" data-wow-delay="0.2s">
-            <div class="m-2">
-                <div class="service-img p-2">
-                    <img src="./img/open-plots.webp" alt="">
-                </div>
-                <div class="content p-2">
-                    <h2 class="mb-2">OPEN PLOTS</h2>
-                    <p class="mb-1">
-
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 wow fadeInUp service p-2" data-wow-delay="0.4s">
-            <div class="m-2">
-                <div class="service-img p-2">
-                    <img src="./img/form-lands.webp" alt="">
-                </div>
-                <div class="content p-2">
-                    <h2 class="mb-2"></h2>
-                    <p class="mb-1">
-
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 wow fadeInUp service p-2" data-wow-delay="0.6s">
-            <div class="m-2">
-                <div class="service-img p-2">
-                    <img src="./img/investment.webp" alt="">
-                </div>
-                <div class="content p-2">
-                    <h2 class="mb-2"></h2>
-                    <p class="mb-1">
-
-                    </p>
-                </div>
-            </div>
-        </div>
 
         <!-- Comparison Start -->
         <div class="container-xxl py-5">
@@ -694,7 +659,8 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h5 class="fw-bold text-white mb-4">Get In Touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>402, MATHRUSREE HOMES APARTMENTS, MATHRUSREE NAGAR MIYAPUR, HYDERABAD, 500049</p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>402, MATHRUSREE HOMES APARTMENTS,
+                            MATHRUSREE NAGAR MIYAPUR, HYDERABAD, 500049</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 8885667888</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>rajaroypramotors21@gmail.com</p>
                         <div class="d-flex pt-2">
