--- a/gallery.html
+++ b/gallery.html
@@ -39,6 +39,7 @@
                 <span class="sr-only">Loading...</span>
             </div>
         </div>
+        </div>
         <!-- Spinner End -->
 
 
@@ -46,8 +47,7 @@
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="m-0"><i class="fa fa-server me-3"></i>GreenHost</h1>
-                    <!-- <img src="img/logo.png" alt="Logo"> -->
+                    <img src="./img/logo1.png" alt="Logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
@@ -120,40 +120,9 @@
                             <h1 class="mb-3">Search Your Domain</h1>
                             <p class="mb-1">Vero justo sed sed vero clita amet. Et justo vero sea diam elitr amet ipsum eos ipsum clita duo sed. Sed vero sea diam erat vero elitr sit clita.</p>
                         </div>
-                        <div class="position-relative w-100 my-3 wow fadeInUp" data-wow-delay="0.3s">
-                            <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Enter your domain name">
-                            <button type="button" class="btn btn-primary py-2 px-3 position-absolute top-0 end-0 mt-2 me-2">Search</button>
                         </div>
-                        <div class="row g-3 wow fadeInUp" data-wow-delay="0.5s">
-                            <div class="col-lg-2 col-md-3 col-sm-4 col-6 text-center">
-                                <h5 class="fw-bold text-primary mb-1">.com</h5>
-                                <p class="mb-0">$9.99/year</p>
-                            </div>
-                            <div class="col-lg-2 col-md-3 col-sm-4 col-6 text-center">
-                                <h5 class="fw-bold text-primary mb-1">.net</h5>
-                                <p class="mb-0">$9.99/year</p>
-                            </div>
-                            <div class="col-lg-2 col-md-3 col-sm-4 col-6 text-center">
-                                <h5 class="fw-bold text-primary mb-1">.org</h5>
-                                <p class="mb-0">$9.99/year</p>
-                            </div>
-                            <div class="col-lg-2 col-md-3 col-sm-4 col-6 text-center">
-                                <h5 class="fw-bold text-primary mb-1">.us</h5>
-                                <p class="mb-0">$9.99/year</p>
-                            </div>
-                            <div class="col-lg-2 col-md-3 col-sm-4 col-6 text-center">
-                                <h5 class="fw-bold text-primary mb-1">.eu</h5>
-                                <p class="mb-0">$9.99/year</p>
-                            </div>
-                            <div class="col-lg-2 col-md-3 col-sm-4 col-6 text-center">
-                                <h5 class="fw-bold text-primary mb-1">.co.uk</h5>
-                                <p class="mb-0">$9.99/year</p>
-                            </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+                        </div>
         <!-- Domain Search End -->
         
 
@@ -231,6 +200,7 @@
                 </div>
             </div>
         </div>
+
         <!-- Footer End -->
 
 
