--- a/gallery.html
+++ b/gallery.html
@@ -60,9 +60,9 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
-                                <a href="team.html" class="dropdown-item">Open Plots</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="comparison.html" class="dropdown-item">Comparison</a>
+                                <a href="./open-plots.html" class="dropdown-item">Open-plots</a>
+                                <a href="./Farms-Land.html" class="dropdown-item">Farms-Land</a>
+                                <a href="./investements.html" class="dropdown-item">Investments</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -80,8 +80,7 @@
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb justify-content-center justify-content-lg-start animated slideInLeft">
                                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                                    <li class="breadcrumb-item text-white active" aria-current="page">Domain</li>
+                                    <li class="breadcrumb-item"><a class="text-white" href="#">Setvices</a></li>
                                 </ol>
                             </nav>
                         </div>
