--- a/gallery.html
+++ b/gallery.html
@@ -61,7 +61,7 @@
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
                                 <a href="./open-plots.html" class="dropdown-item">Open-plots</a>
-                                <a href="./Farms-Land.html" class="dropdown-item">Farms-Land</a>
+                                <a href="./farms-Land.html" class="dropdown-item">Farms-Land</a>
                                 <a href="./investements.html" class="dropdown-item">Investments</a>
                             </div>
                         </div>
