--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
-                                <a href="team.html" class="dropdown-item">Open Plots</a>
-                                <a href="testimonial.html" class="dropdown-item">Form-Lands</a>
-                                <a href="comparison.html" class="dropdown-item">Investment</a>
+                                <a href="./open-plots.html" class="dropdown-item">Open Plots</a>
+                                <a href="./farms-Land.html" class="dropdown-item">Form-Lands</a>
+                                <a href="./investements.html" class="dropdown-item">Investment</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
