--- a/open-plots.html
+++ b/open-plots.html
@@ -55,12 +55,13 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">SERVICES</a>
                             <div class="dropdown-menu m-0">
-                                <a href="team.html" class="dropdown-item active">OPEN PLOTS</a>
-                                <a href="testimonial.html" class="dropdown-item">Form-Lands</a>
-                                <a href="comparison.html" class="dropdown-item">Investment</a>
+                                <a href="./open-plots.html" class="dropdown-item active">OPEN PLOTS</a>
+                                <a href="./farms-Land.html" class="dropdown-item">Form-Lands</a>
+                                <a href="./investements.html" class="dropdown-item">Investment</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
