--- a/farm-lands.html
+++ b/farm-lands.html
@@ -63,7 +63,7 @@
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">SERVICES</a>
                             <div class="dropdown-menu m-0">
                                 <a href="./open-plots.html" class="dropdown-item">Open-plots</a>
-                                <a href="./Farms-Land.html" class="dropdown-item active">FORM - LANDS</a>
+                                <a href="./farm-lands.html" class="dropdown-item active">FORM - LANDS</a>
                                 <a href="./investements.html" class="dropdown-item">Investments</a>
                             </div>
                         </div>
