--- a/investements.html
+++ b/investements.html
@@ -64,7 +64,7 @@
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">SERVICES</a>
                             <div class="dropdown-menu m-0">
                                 <a href="./open-plots.html" class="dropdown-item">Open Plots</a>
-                                <a href="./farms-Land.html" class="dropdown-item">Form-Lands</a>
+                                <a href="./farm-lands.html" class="dropdown-item">Form-Lands</a>
                                 <a href="./investements.html" class="dropdown-item active">Investment</a>
                             </div>
                         </div>
