--- a/gallery.html
+++ b/gallery.html
@@ -61,7 +61,7 @@
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                             <div class="dropdown-menu m-0">
                                 <a href="./open-plots.html" class="dropdown-item">Open-plots</a>
-                                <a href="./farms-Land.html" class="dropdown-item">Farms-Land</a>
+                                <a href="./farm-lands.html" class="dropdown-item">Farms-Land</a>
                                 <a href="./investements.html" class="dropdown-item">Investments</a>
                             </div>
                         </div>
@@ -76,11 +76,11 @@
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 pt-5">
                         <div class="col-12 text-center text-lg-start">
-                            <h1 class="display-4 text-white animated slideInLeft">Domain Registration</h1>
+                            <h1 class="display-4 text-white animated slideInLeft">Gallery</h1>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb justify-content-center justify-content-lg-start animated slideInLeft">
                                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Setvices</a></li>
+                                    <li class="breadcrumb-item"><a class="text-white" href="#">Services</a></li>
                                 </ol>
                             </nav>
                         </div>
