--- a/open-plots.html
+++ b/open-plots.html
@@ -60,7 +60,7 @@
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">SERVICES</a>
                             <div class="dropdown-menu m-0">
                                 <a href="./open-plots.html" class="dropdown-item active">OPEN PLOTS</a>
-                                <a href="./farms-Land.html" class="dropdown-item">Form-Lands</a>
+                                <a href="./farm-lands.html" class="dropdown-item">Form-Lands</a>
                                 <a href="./investements.html" class="dropdown-item">Investment</a>
                             </div>
                         </div>
