--- a/farm-lands.html
+++ b/farm-lands.html
@@ -64,7 +64,7 @@
                             <div class="dropdown-menu m-0">
                                 <a href="./open-plots.html" class="dropdown-item">Open-plots</a>
                                 <a href="./farm-lands.html" class="dropdown-item active">FORM - LANDS</a>
-                                <a href="./investements.html" class="dropdown-item">Investments</a>
+                                <a href="./investments.html" class="dropdown-item">Investments</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
