--- a/open-plots.html
+++ b/open-plots.html
@@ -61,7 +61,7 @@
                             <div class="dropdown-menu m-0">
                                 <a href="./open-plots.html" class="dropdown-item active">OPEN PLOTS</a>
                                 <a href="./farm-lands.html" class="dropdown-item">Form-Lands</a>
-                                <a href="./investements.html" class="dropdown-item">Investment</a>
+                                <a href="./investments.html" class="dropdown-item">Investment</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
