--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                             <div class="dropdown-menu m-0">
                                 <a href="./open-plots.html" class="dropdown-item">Open Plots</a>
                                 <a href="./farm-lands.html" class="dropdown-item">Form-Lands</a>
-                                <a href="./investements.html" class="dropdown-item">Investment</a>
+                                <a href="./investments.html" class="dropdown-item">Investment</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link active">Contact</a>
