--- a/investments.html
+++ b/investments.html
@@ -65,7 +65,7 @@
                             <div class="dropdown-menu m-0">
                                 <a href="./open-plots.html" class="dropdown-item">Open Plots</a>
                                 <a href="./farm-lands.html" class="dropdown-item">Form-Lands</a>
-                                <a href="./investements.html" class="dropdown-item active">Investment</a>
+                                <a href="./investments.html" class="dropdown-item active">Investment</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
