--- a/index.html
+++ b/index.html
@@ -406,78 +406,78 @@
 
         </style>
         <!-- Comparison Start -->
-        <div class="container-xxl py-5">
+        <div class="container-xxl py-5 why">
             <div class="container px-lg-5">
                 <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
                     data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">Shared VS Dedicated Server</h1>
-                    <p class="mb-1">Vero justo sed sed vero clita amet. Et justo vero sea diam elitr amet ipsum eos
-                        ipsum clita duo sed. Sed vero sea diam erat vero elitr sit clita.</p>
+                    <h5 class="mb-3">Why Choose Us</h5>
+                    <h3 class="mb-1">Six Reasons For People Choosing Us</h3>
                 </div>
-                <div class="row g-5 comparison position-relative">
-                    <div class="col-lg-6 pe-lg-5">
-                        <div class="section-title position-relative mx-auto mb-4 pb-4">
-                            <h3 class="fw-bold mb-0">Shared Server</h3>
-                        </div>
-                        <div class="row gy-3 gx-5">
-                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
-                                <i class="fa fa-server fa-3x text-primary mb-3"></i>
-                                <h5 class="fw-bold">99.99% Uptime</h5>
-                                <p>Ipsum dolor diam stet stet kasd diam sea stet sed rebum dolor ipsum</p>
+                <div class="row g-5  position-relative">
+                    <div class="col-lg-12 pe-lg-5">
+
+                        <div class="row gy-3 gx-5 text-center why-us">
+                            <div class="col-sm-4 wow fadeIn p-4" data-wow-delay="0.1s">
+                                <i class="fa fa-award  fa-3x text-primary mb-3"></i>
+                                <h5 class="fw-bold">Quality Material</h5>
+                                <p>Quality is not just our commitment; it's our signature, reflecting in every project
+                                    we undertake.</p>
                             </div>
-                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
-                                <i class="fa fa-shield-alt fa-3x text-primary mb-3"></i>
-                                <h5 class="fw-bold">100% Secured</h5>
-                                <p>Ipsum dolor diam stet stet kasd diam sea stet sed rebum dolor ipsum</p>
+                            <div class="col-sm-4 wow fadeIn p-4" data-wow-delay="0.3s">
+                                <i class="fa fa-check-circle fa-3x text-primary mb-3"></i>
+                                <h5 class="fw-bold">Accredited</h5>
+                                <p>We are proud to be accredited, a testament to our unwavering commitment to industry
+                                    excellence.</p>
                             </div>
-                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
-                                <i class="fa fa-cog fa-3x text-primary mb-3"></i>
-                                <h5 class="fw-bold">Control Panel</h5>
-                                <p>Ipsum dolor diam stet stet kasd diam sea stet sed rebum dolor ipsum</p>
+                            <div class="col-sm-4 wow fadeIn p-4" data-wow-delay="0.5s">
+                                <i class="fa fa-user fa-3x text-primary mb-3"></i>
+                                <h5 class="fw-bold">Trained Team</h5>
+                                <p>Our company boasts a highly trained team, skilled to tackle every challenge with
+                                    expertise and precision.</p>
                             </div>
-                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
-                                <i class="fa fa-headset fa-3x text-primary mb-3"></i>
-                                <h5 class="fw-bold">24/7 Support</h5>
-                                <p>Ipsum dolor diam stet stet kasd diam sea stet sed rebum dolor ipsum</p>
+                            <div class="col-sm-4 wow fadeIn p-4" data-wow-delay="0.7s">
+                                <i class="fa fa-clock fa-3x text-primary mb-3"></i>
+                                <h5 class="fw-bold">Time Availability</h5>
+                                <p>We prioritize time availability, ensuring our services align seamlessly with your
+                                    schedule and needs.</p>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 ps-lg-5">
-                        <div class="section-title position-relative mx-auto mb-4 pb-4">
-                            <h3 class="fw-bold mb-0">Dedicated Server</h3>
-                        </div>
-                        <div class="row gy-3 gx-5">
-                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
-                                <i class="fa fa-server fa-3x text-secondary mb-3"></i>
-                                <h5 class="fw-bold">99.99% Uptime</h5>
-                                <p>Ipsum dolor diam stet stet kasd diam sea stet sed rebum dolor ipsum</p>
+                            <div class="col-sm-4 wow fadeIn p-4" data-wow-delay="0.7s">
+                                <i class="fa fa-phone-volume fa-3x text-primary mb-3"></i>
+                                <h5 class="fw-bold">Quick Response</h5>
+                                <p>Our company prides itself on 24/7 time availability, ensuring we are always there
+                                    when you need us.</p>
                             </div>
-                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
-                                <i class="fa fa-shield-alt fa-3x text-secondary mb-3"></i>
-                                <h5 class="fw-bold">100% Secured</h5>
-                                <p>Ipsum dolor diam stet stet kasd diam sea stet sed rebum dolor ipsum</p>
-                            </div>
-                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
-                                <i class="fa fa-cog fa-3x text-secondary mb-3"></i>
-                                <h5 class="fw-bold">Control Panel</h5>
-                                <p>Ipsum dolor diam stet stet kasd diam sea stet sed rebum dolor ipsum</p>
-                            </div>
-                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
-                                <i class="fa fa-headset fa-3x text-secondary mb-3"></i>
-                                <h5 class="fw-bold">24/7 Support</h5>
-                                <p>Ipsum dolor diam stet stet kasd diam sea stet sed rebum dolor ipsum</p>
+                            <div class="col-sm-4 wow fadeIn p-4" data-wow-delay="0.7s">
+                                <i class="fa fa-certificate fa-3x text-primary mb-3"></i>
+                                <h5 class="fw-bold">3 years Assurance</h5>
+                                <p>We provide a solid 3-year assurance, guaranteeing the longevity and reliability of
+                                    our projects.</p>
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
         <!-- Comparison Start -->
+        <style>
+            .why-us div {
+                box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.349);
+            }
 
+            .why-us div:hover {
+                box-shadow: 3px 3px 6px #cb4154, 4px 4px 8px #cb4154;
+            }
+        </style>
 
         <!-- Testimonial Start -->
         <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
             <div class="container px-lg-5">
+                <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
+                    data-wow-delay="0.1s" style="max-width: 600px;">
+
+                    <h3 class="mb-1">People Say The Nicest Things</h3>
+                </div>
                 <div class="owl-carousel testimonial-carousel">
                     <div
                         class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4">
@@ -485,48 +485,32 @@
                             style="width: 45px; height: 45px; margin-top: -3px;">
                             <i class="fa fa-quote-left text-white"></i>
                         </div>
-                        <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod
-                            eos labore diam</p>
+                        <p class="mt-3">This Company has good collection of projects and staff was very friendly and
+                            given very detailed explanation of Plots.</p>
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg"
                                 style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Client Name</h6>
-                                <small>Profession</small>
+                                <h6 class="fw-bold mb-1">Nexon</h6>
+                                <small>customer</small>
                             </div>
                         </div>
                     </div>
+
                     <div
                         class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4">
                         <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle"
                             style="width: 45px; height: 45px; margin-top: -3px;">
                             <i class="fa fa-quote-left text-white"></i>
                         </div>
-                        <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod
-                            eos labore diam</p>
-                        <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-2.jpg"
-                                style="width: 50px; height: 50px;">
-                            <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Client Name</h6>
-                                <small>Profession</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div
-                        class="testimonial-item position-relative bg-light border-top border-5 border-primary rounded p-4 my-4">
-                        <div class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 ms-5 translate-middle bg-primary rounded-circle"
-                            style="width: 45px; height: 45px; margin-top: -3px;">
-                            <i class="fa fa-quote-left text-white"></i>
-                        </div>
-                        <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod
-                            eos labore diam</p>
+                        <p class="mt-3">Padma sri helped me to choose good Plot. Really a budget friendly Company.
+                            Prices are affordable to buy the Plots & other services, for all Excellent service.</p>
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg"
                                 style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Client Name</h6>
-                                <small>Profession</small>
+                                <h6 class="fw-bold mb-1">KAMALA</h6>
+                                <small>customer</small>
                             </div>
                         </div>
                     </div>
@@ -536,14 +520,15 @@
                             style="width: 45px; height: 45px; margin-top: -3px;">
                             <i class="fa fa-quote-left text-white"></i>
                         </div>
-                        <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod
-                            eos labore diam</p>
+                        <p class="mt-3">I have been an investor with Raja Roy Promotors , and I am extremely pleased
+                            with my experience. From the very beginning, the company has demonstrated a commitment to
+                            excellence, transparency, and value creation.</p>
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-4.jpg"
                                 style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h6 class="fw-bold mb-1">Client Name</h6>
-                                <small>Profession</small>
+                                <h6 class="fw-bold mb-1">Tejeshwara Rao</h6>
+                                <small>Invester</small>
                             </div>
                         </div>
                     </div>
@@ -553,8 +538,26 @@
         <!-- Testimonial End -->
 
 
+        <div class="container-xxl pt-5 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="container">
+                <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
+                    data-wow-delay="0.1s" style="max-width: 600px;">
+
+                    <h3 class="mb-1">Our Location</h3>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15220.950548588293!2d78.363599!3d17.496166!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb92142fffffff%3A0xabf8f98d7db14bd2!2sRAJA%20ROY%20PRAMOTORS!5e0!3m2!1sen!2sus!4v1710506257969!5m2!1sen!2sus"
+                            style="border:0;" width="100%" height="500px" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Team Start -->
-        <div class="container-xxl py-5">
+        <!-- <div class="container-xxl py-5">
             <div class="container px-lg-5">
                 <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
                     data-wow-delay="0.1s" style="max-width: 600px;">
@@ -633,24 +636,17 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Team End -->
 
 
         <!-- Footer Start -->
         <div class="container-fluid bg-primary text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+            <div class="over"></div>
             <div class="container py-5 px-lg-5">
                 <div class="row gy-5 gx-4 pt-5">
-                    <div class="col-12">
-                        <h5 class="fw-bold text-white mb-4">Subscribe Our Newsletter</h5>
-                        <div class="position-relative" style="max-width: 400px;">
-                            <input class="form-control bg-white border-0 w-100 py-3 ps-4 pe-5" type="text"
-                                placeholder="Enter your email">
-                            <button type="button"
-                                class="btn btn-primary py-2 px-3 position-absolute top-0 end-0 mt-2 me-2">Submit</button>
-                        </div>
-                    </div>
-                    <div class="col-lg-5 col-md-12">
+
+                    <div class="col-lg-8 col-md-12">
                         <div class="row gy-5 g-4">
                             <div class="col-md-6">
                                 <h5 class="fw-bold text-white mb-4">Our links</h5>
@@ -671,7 +667,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="col-md-6 col-lg-4">
                         <h5 class="fw-bold text-white mb-4">Get In Touch</h5>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>402, MATHRUSREE HOMES APARTMENTS,
                             MATHRUSREE NAGAR MIYAPUR, HYDERABAD, 500049</p>
@@ -684,14 +680,7 @@
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 mt-lg-n5">
-                        <div class="bg-light rounded" style="padding: 30px;">
-                            <input type="text" class="form-control border-0 py-2 mb-2" placeholder="Name">
-                            <input type="email" class="form-control border-0 py-2 mb-2" placeholder="Email">
-                            <textarea class="form-control border-0 mb-2" rows="2" placeholder="Message"></textarea>
-                            <button class="btn btn-primary w-100 py-2">Send Message</button>
-                        </div>
-                    </div>
+
                 </div>
             </div>
             <div class="container px-lg-5">
