--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
 
 
         <!-- Team Start -->
-        <div class="container-xxl py-5">
+        <!-- <div class="container-xxl py-5">
             <div class="container px-lg-5">
                 <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp"
                     data-wow-delay="0.1s" style="max-width: 600px;">
@@ -177,7 +177,7 @@
                         Expertise, and Care to Make your Real Estate Experience Truly Positive and Rewarding.</p>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Team End -->
         <div class="text-center col-lg-12 py-1 m-2">
             <h1>Our History</h1>
